--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:design:28.0.0-alpha1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
